...
enum class KeyboardLayoutStyle {
    BOTTOM,
    SPLIT,
}

enum class KoalaPadShortcutKey {
    SPACE,
    RETURN,
    ESCAPE,
    TAB,
    A,
    B,
    C,
...
